@@ -1,5 +1,8 @@
 SDL2_gfx ChangeLog
 
+Sun, Jul 13, 2014  9:21:00 AM
+- added TestFramerate
+
 Fri, Jul 11, 2014  7:33:12 PM
 - rewrote thick line algorithm using polygon drawing (much less
   code and faster than original Murphy-Bresenham algorithm)
